# finance-agent

./: docker-compose.yml  get_auth0_token.py  pyproject.toml
.github/workflows/: build-and-push.yml
finance_agent/: __init__.py  agent_config.json  main.py
finance_agent/skills/finance/: skill.yaml
tests/: test_main.py
